add_subdirectory(algorithms)
add_subdirectory(application_libraries)
add_subdirectory(communication)
add_subdirectory(containers)
add_subdirectory(data_structures)
add_subdirectory(design_patterns)
add_subdirectory(error_handling)
add_subdirectory(functional)
add_subdirectory(generic_programming)
add_subdirectory(json)
add_subdirectory(language_extensions)
add_subdirectory(memory_management)
add_subdirectory(number_handling)
add_subdirectory(parallel_programming)
add_subdirectory(streams_and_files)
add_subdirectory(string_handling)
add_subdirectory(time)